--- a/Solutions/CMakeLists.txt
+++ b/Solutions/CMakeLists.txt
@@ -5,5 +5,8 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("Solutions")
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 # Включите подпроекты.
 add_subdirectory ("SaveAndLoad")
