Add ProtobufTest and setup protobuf

--- a/Solutions/CMakeLists.txt
+++ b/Solutions/CMakeLists.txt
@@ -1,12 +1,8 @@
-﻿# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
-# и включите сюда подпроекты.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
 project ("Solutions")
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Включите подпроекты.
-add_subdirectory ("SaveAndLoad")
+add_subdirectory ("ProtobufTest")
