--- a/Solutions/CMakeLists.txt
+++ b/Solutions/CMakeLists.txt
@@ -5,4 +5,4 @@ project ("Solutions")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_subdirectory ("PhoneBookProto")
+add_subdirectory ("YellowPages")
