--- a/Solutions/Mython2/CMakeLists.txt
+++ b/Solutions/Mython2/CMakeLists.txt
@@ -4,8 +4,9 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Добавьте источник в исполняемый файл этого проекта.
-add_executable (Solutions "lexer.cpp" "lexer_test.cpp" 
-	"comparators.cpp" "mython.cpp" "object.cpp" "object_holder.cpp" "object_holder_test.cpp" 
+add_executable (Solutions
+	"mython.cpp" 
+	"lexer.cpp" "comparators.cpp" "object.cpp" "object_holder.cpp" "object_holder_test.cpp" "lexer_test.cpp"
 	"object_test.cpp" "object_test.cpp" "parse.cpp" "parse_test.cpp" "statement.cpp" "statement_test.cpp"
 	"lexer.h" "test_runner.h" "comparators.h" "object.h" "object_holder.h" "parse.h" "statement.h"
 )
